# results

./: .gitmodules  README.md  install_deps.sh  make_bar_chart.py  tr = ,  trial_conditions.yaml
Graphs/: ExampleStackedBar.csv  make_bar_chart.py
analysis/: #main.py#  .#main.py  .gitignore  README.md  cpu_spreadsheet.csv  demo_fps.csv  gpu_spreadsheet.csv  inter_trial_analysis.py  main.py  materials_fps.csv  per_trial_analysis.py  platformer_fps.csv  plot_graphs.py  power_spreadsheet.csv  pyproject.toml  sponza_fps.csv  util.py
analysis/.cpu_timer3/: 0e981379265197f0_data.csv  571462030bf06968_data.csv  5d80a706927375a7_data.csv  6dac517f5a4aacaa_data.csv  71d1ea1329eb228f_data.csv  8a717397e6b148e8_data.csv  c99e05f6235b7135_data.csv  d106d9a26fb41199_data.csv  d86b7c1b53502345_data.csv
metrics-desktop-demo/: camera_cvtfmt.sqlite  demo-nvidia.txt  demo-perf.txt  imu_cam.sqlite  metrics-desktop-demo-mtp.csv  mtp.csv  mtp_record.sqlite  nvidia-smi.txt  perf-results.txt  plugin_name.sqlite  switchboard_callback.sqlite  switchboard_check_queues.sqlite  switchboard_topic_stop.sqlite  threadloop_iteration.sqlite  timewarp_gpu.sqlite
metrics-desktop-materials/: camera_cvtfmt.sqlite  imu_cam.sqlite  materialsnvidia.txt  metrics-desktop-materials-mtp.csv  mtp.csv  mtp_record.sqlite  nvidia-smi.txt  perf-results.txt  perfmaterials.txt  plugin_name.sqlite  switchboard_callback.sqlite  switchboard_check_queues.sqlite  switchboard_topic_stop.sqlite  threadloop_iteration.sqlite  timewarp_gpu.sqlite
metrics-desktop-platformer/: camera_cvtfmt.sqlite  imu_cam.sqlite  mtp.csv  (+11 more)
(+420 files in other folders)
