[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <sam@samgrayson.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
tabulate = "^0.8.7"
tqdm = "^4.48.2"
"charmonium.time_block" = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
