[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <sam@samgrayson.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
tabulate = "^0.8.7"
tqdm = "^4.48.2"
"charmonium.time_block" = "^0.2.0"
seaborn = "^0.10.1"
"charmonium.cache" = "^0.6.0"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
